# clpsych26-cuny

./: README.md  pyproject.toml
clpsych/common/: data_loader.py  llm.py  utils.py
clpsych/task1/: aggregate_results.py  generate_submission.py  prompts.py  run.py
clpsych/task2/: classify.py  data.py  features.py  merge_submission.py  predictions.py
clpsych/task3/: aggregate.py  evaluate.py  prompts.py  run.py  summary_based.py
